<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <item android:title="@string/nav_drawer_first_title"
        android:checkable="true"
        android:id="@+id/title1">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_profile"
                    android:title="@string/nav_drawer_profile"/>
                <item
                    android:id="@+id/nav_messages"
                    android:icon="@drawable/ic_messages"
                    android:title="@string/nav_drawer_messages" />
                <item
                    android:id="@+id/nav_discover"
                    android:icon="@drawable/ic_discover"
                    android:title="@string/nav_drawer_discover" />
                <item
                    android:id="@+id/nav_statistic"
                    android:icon="@drawable/ic_statistics"
                    android:title="@string/nav_drawer_statistics" />

                <item
                    android:id="@+id/nav_collections"
                    android:icon="@drawable/ic_collections"
                    android:title="@string/nav_drawer_collection" />

            </group>
        </menu>
    </item>
    <item   android:title="@string/nav_drawer_second_title"
        android:checkable="true"
        android:id="@+id/title2">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/action_settings" />
                <item
                    android:id="@+id/nav_logOut"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/nav_drawer_third_title"/>


            </group>
        </menu>
    </item>

</menu>