<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="bot_nav_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_outline_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_outline_courses"
            android:title="@string/menu_courses"/>

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_outline_search"
            android:title="@string/menu_search" />

<!--        <item-->
<!--            android:id="@+id/nav_query"-->
<!--            android:icon="@drawable/ic_outline_query"-->
<!--            android:title="@string/menu_query" />-->
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_outline_tools"
            android:title="@string/menu_tools" />

    </group>
</menu>